add basic Room resource serving

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.servlet.context-path=/api
+server.port=8080
+
+spring.datasource.url=${url}
+spring.datasource.username=${username}
+spring.datasource.password=${password}
+
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+
 
